list only the needed header files

--- a/facilities/Makefile.am
+++ b/facilities/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 #
-# $Id: Makefile.am,v 1.1 1999/12/24 21:20:28 pfkeb Exp $
+# $Id: Makefile.am,v 1.1 1999/12/25 18:46:15 pfkeb Exp $
 #
 # Author: Paul_Kunz@slac.stanford.edu
 #
@@ -8,20 +8,25 @@
 # The following set,  else would follow GNU conventions
 AUTOMAKE_OPTIONS = foreign
 
-facilitiesincludedir = $(includedir)/facilities
+facilitiesdir = $(includedir)/facilities
 
-facilitiesinclude_HEADERS = \
+## headers required in shared file system installation
+facilities_HEADERS =     \
 	Adapter.h        \
 	Clock.h          \
-	Commissioner.h   \
-	Converter.h      \
 	FIFO.h           \
 	Observer.h       \
-	ScheduledEvent.h \
 	Scheduler.h      \
+	ScheduledEvent.h \
+	SimpleEvent.h    \
 	Utility.h        \
-	binarystream.h   \
 	bitmanip.h       \
 	bpkt_streams.h   \
-	error.h          \
+	error.h
+
+## headers not needed in shared file system installation
+noinst_HEADERS =         \
+	Commissioner.h   \
+	Converter.h      \
+	binarystream.h   \
 	filemap.h
