--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_REVISION($Revision: 1.1 $)
+AC_REVISION($Revision: 1.2 $)
 
 AC_INIT(src/Clock.cxx)
 AC_CONFIG_AUX_DIR(config)
@@ -29,7 +29,7 @@ fi
 AC_OUTPUT(Makefile facilities/Makefile src/Makefile)
 
 
-AC_MSG_RESULT([]
+AC_MSG_RESULT([
 	facilities package now configured.
 ])
 
