--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 #
-# $Id: Makefile.am,v 1.2 1999/12/25 02:25:35 pfkeb Exp $
+# $Id: Makefile.am,v 1.1 1999/12/25 18:46:15 pfkeb Exp $
 #
 # Author: Paul_Kunz@slac.stanford.edu
 #
@@ -17,5 +17,4 @@ libfacilities_la_SOURCES = \
 
 libfacilities_la_LDFLAGS = -version-info 1
 
-INCLUDES = -I$(top_srcdir) \
-	-I$(glast_prefix)/include
+INCLUDES = -I$(top_srcdir)
