--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_REVISION($Revision: 1.3 $)
+AC_REVISION($Revision: 1.4 $)
 
 AC_INIT(src/Clock.cxx)
 AC_CONFIG_AUX_DIR(config)
@@ -15,7 +15,7 @@ AM_PROG_LIBTOOL
 dnl Check for location of installed GLAST libraries
 glast_CHECK_ROOT
 
-AC_OUTPUT(Makefile facilities/Makefile src/Makefile)
+AC_OUTPUT(Makefile facilities.spec facilities/Makefile src/Makefile)
 
 
 AC_MSG_RESULT([
