--- a/configure.in
+++ b/configure.in
@@ -1,10 +1,11 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_REVISION($Revision: 1.4 $)
+AC_REVISION($Revision: 1.5 $)
 
 AC_INIT(src/Clock.cxx)
 AC_CONFIG_AUX_DIR(config)
 AM_INIT_AUTOMAKE(facilities, 1.0)
+AM_CONFIG_HEADER(config.h)
 
 dnl Checks for programs.
 AC_PROG_CXX
