--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 #
-# $Id: Makefile.am,v 1.1 1999/12/25 18:46:15 pfkeb Exp $
+# $Id: Makefile.am,v 1.2 2000/01/17 00:58:50 pfkeb Exp $
 #
 # Author: Paul_Kunz@slac.stanford.edu
 #
@@ -8,13 +8,11 @@
 # The following set,  else would follow GNU conventions
 AUTOMAKE_OPTIONS = foreign
 
-lib_LTLIBRARIES = libfacilities.la
+noinst_LTLIBRARIES = libfacilities.la
 
 libfacilities_la_SOURCES = \
 	Clock.cxx          \
 	ScheduledEvent.cxx \
 	Scheduler.cxx
-
-libfacilities_la_LDFLAGS = -version-info 1
 
 INCLUDES = -I$(top_srcdir)
