--- a/facilities/Makefile.am
+++ b/facilities/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 #
-# $Id: Makefile.am,v 1.1 1999/12/25 18:46:15 pfkeb Exp $
+# $Id: Makefile.am,v 1.2 2000/01/01 23:34:58 pfkeb Exp $
 #
 # Author: Paul_Kunz@slac.stanford.edu
 #
@@ -8,10 +8,10 @@
 # The following set,  else would follow GNU conventions
 AUTOMAKE_OPTIONS = foreign
 
-facilitiesdir = $(includedir)/facilities
+libfacilities_ladir = $(includedir)/facilities
 
 ## headers required in shared file system installation
-facilities_HEADERS =     \
+libfacilities_la_HEADERS =     \
 	Adapter.h        \
 	Clock.h          \
 	FIFO.h           \
@@ -23,6 +23,8 @@ facilities_HEADERS =     \
 	bitmanip.h       \
 	bpkt_streams.h   \
 	error.h
+
+
 
 ## headers not needed in shared file system installation
 noinst_HEADERS =         \
