--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,3 +63,8 @@ install(
   ARCHIVE DESTINATION lib
   INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 )
+
+install(
+  TARGETS py_facilities
+  LIBRARY DESTINATION ${PYTHON_SITE_PKGDIR}
+)
